--- a/CHANGELOG
+++ b/CHANGELOG
@@ -3,7 +3,6 @@
 All notable changes to this project will be documented in this file.
 
 The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
-
 and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).
 
 ## [Unreleased]
@@ -11,7 +10,21 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 - Fluentd driver for logging
 - Live streaming of logs
 
-## [1.22.3] - 2023-10-05
+## [2.0] - 2025-01-11
+
+### Added
+
+- Changelog file
+- A new destructored DriverOptions customized for each driver
+- PDM support for building and manage dependencies for the project
+- Build and deploy on Pipeline
+
+### Changed
+
+- Now, the drivers are more customizable, we changed the DriverOptions to a destructored object. You have as builtin options the following:
+  - file
+  - stdout
+  - graylog
 
 ### Added
 
